--- a/ELearningManagement - fontend/package.json
+++ b/ELearningManagement - fontend/package.json
@@ -32,8 +32,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.17",
-    "@angular/cli": "~12.0.3",
+    "@angular-devkit/build-angular": "^15.1.1",
+    "@angular/cli": "^15.1.1",
     "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/jquery": "^3.5.5",
