--- a/ELearningManagement - fontend/package.json
+++ b/ELearningManagement - fontend/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.6.0",
     "ngx-owl-carousel-o": "^6.0.0",
     "node-modules": "^0.0.1",
+    "npm": "^9.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
